Changes in Version 0.3:
	o Fixed a bug where higher order latent variables were not usuable
	o Added the 'mimic' argument. mimic = "lavaan" will mimic lavaan results when using std.ov = TRUE in lavaan.